TGUI 0.8.5  (TBD)
-----------------

- Svg images are now supported
- ComboBox can now contain some text when no item is selected
- Added function to ComboBox to disallow changing the selected item by scrolling the mouse wheel
- Added RightClicked signal to ListView
- Added functions to ListView to change existing items
- ChildWindow can now have a different border color in focused state
- EditBox::setInputValidator now returns false when regex was invalid
- Let ComboBox send the ItemSelected event only after the mouse is released
- TitleBarHeight property of default renderer was ignored in ChildWindow
- Label didn't ignore events after ignoreMouseEvents was called
- Adding space around widgets in Grid to fill the given size wasn't working properly
- Loading widget from file failed when min or max was used in layout strings


TGUI 0.8.4  (23 February 2019)
------------------------------

- Added Changed signal to CheckBox and RadioButton (to more easily combine Checked and Unchecked)
- Added EscapeKeyPressed signal to ChildWindow
- ExpandDirection of ComboBox can now be set to Automatic
- Added min and max functions to layouts again
- Added horizontal grid lines to ListView
- Added option to ListView to expand the last column to fill the remaining space
- Allow a separator between the header and contents in a ListView
- Split separator in ListView into separator and vertical grid line
- Fixed corrupted white theme when DefaultTheme was initialized before Color constants


TGUI 0.8.3  (27 January 2019)
-----------------------------

- ListView widget added
- EditBox can now have a suffix
- TextBox can now have a horizontal scrollbar
- Label can now have a vertical scrollbar
- Default scrollbar width wasn't always taken from texture size in widgets containing scrollbars
- Scrollbar wasn't drawn correctly when Maximum equaled ViewportSize with AutoHide disabled
- Default icons in TreeView didn't change color when item was selected